# pytorch-lightning-template

./: .gitignore  .pylintrc  LICENSE  README.md  dockerfile  pyproject.toml
cfg/: test.yaml  train.yaml
cfg/test/: SampleCFG.yaml
cfg/train/: SampleCFG.yaml
codes/: dataset.py  main.py  module.py  test.py  train.py  utils.py
codes/criterion/: MultiCriterion.py  multi_criterion.py
codes/dataset/: SampleDataset.py  data_module.py  datamodule.py  random_image_dataset.py  sample_dataset.py
codes/model/: model.py  net.py  sample_model.py
codes/models/: SampleModel.py
codes/options/: base_options.py  options.py  train_options.py
codes/options/data_options/: train_data_options.py
src/pytorch_lightning_template/: __init__.py  __main__.py  module.py  test.py  train.py
src/pytorch_lightning_template/criterion/: __init__.py  multi_criterion.py
src/pytorch_lightning_template/dataset/: __init__.py  datamodule.py  fashion_mnist.py
src/pytorch_lightning_template/model/: __init__.py  resnet.py
src/pytorch_lightning_template/utils/: __init__.py  utils.py
src/pytorch_lightning_template/utils/typing/: __init__.py  config.py
tests/: conftest.py
tests/functional_tests/: overfit.yaml  test_functional_example.py
tests/unittests/: test_dataloader.py
